--- a/child_pages/cc-elections/Candidates/vance.html
+++ b/child_pages/cc-elections/Candidates/vance.html
@@ -62,7 +62,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Jeff Van Drew</h6>
+              <h6 class="page-title">J.D. Vance</h6>
               <p>
                 J.D. Vance is an American best-selling author, current US Senator, and venture capitalist who is the Republican nominee for US Vice President. 
 
