quick summary button fix attempt riley page

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -64,14 +64,14 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">John P. Capizola, Jr.</h6>
               <p>Former Commissioner Capizola is a democrat with approximately one year of experience serving as a 
-                commissioner. He seems to be running with former Sheriff Austino 'against' Perella and Smith. Without having any direct way to verify, we 
-                assume by surface level comparison that Austino and Capizola would be more center-left than Smith and Perella. Some quick points of note are that 
-                he seems to have a moderate stance on gun control, supports armed security in schools, and supported the middle mile broadband grant. He also has 
-                spoken against school vouchers, he hopes to make local politics less partisan, and he supports better transparency and communication between the 
-                government and constituents. In terms of specific agenda should he get elected, his focus seems to be to improve roads/infrastructure/broadband, 
+                commissioner. Some quick points of note are that he seems to have a moderate stance on gun control, supports armed security in schools, and supported 
+                the middle mile broadband grant. He also has spoken against school vouchers, he hopes to make local politics less partisan, and he supports better transparency 
+                and communication between the government and constituents. In terms of specific agenda should he get elected, his focus seems to be to improve roads/infrastructure/broadband, 
                 to support senior housing and healthcare, and to provide recreational advancements. 
-                <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">Facebook source</a> Click the red x at the top of this 
-                box and then scroll down down for more in-depth information and sources.
+                <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">Facebook source</a>. Also, Austino and Capizola have openly supported the Harris/Walz 
+                ticket on <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">facebook</a>, 
+                so it follows that Austino/Capizola will support and/or implement that agenda, unless they clarify otherwise in the future. Click the red x at the top of this box and then 
+                scroll down down for more in-depth information and sources.
               </p>
             </div>
           
