--- a/child_pages/cc-elections/Candidates/riley.html
+++ b/child_pages/cc-elections/Candidates/riley.html
@@ -56,15 +56,12 @@
             </div>
         </div>
 
-        <dialog id="myModal" class="modal">
-
             <!-- Modal content -->
             <div class="modal-content">
-                <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
-                <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Celeste Riley</h6>
-              <p>
-                Current County Clerk Celeste Riley is running for re-election this year. She is currently serving her second term, which means she inherently has more 
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">John P. Capizola, Jr.</h6>
+              <p>Current County Clerk Celeste Riley is running for re-election this year. She is currently serving her second term, which means she inherently has more 
                 experience in this position than her Republican challenger, Commissioner Lods. She was an Assemblywoman in the 3rd district, having won re-election for 
                 that position, and served several committee positions during her tenure in that position. She has served as both a Bridgeton City Council member and the 
                 Bridgeton City Council president. Like many candidates, Celeste does seem like a strong general political candidate, but it is not clear how her qualifications 
