--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -73,6 +73,9 @@
             "My big thing is money and budget. The county is attempting to build 3 county parks when our budget is stretched. I helped run a budget for 15 years, so I will help bring 
             fiscal responsibility to the board of commissioners." Be sure to check our 
             <a href="https://www.informthevotenj.com/child_pages/cc-elections/cc_election_issues">county issues page</a> to get a more detailed look at what's going on in the county. 
+            Also, Austino and Capizola have openly supported the Harris/Walz 
+            ticket on <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">facebook</a>, 
+            so it follows that Austino/Capizola will support and/or implement that agenda, unless they clarify otherwise in the future.
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
