quick summary button fix attempt #3 riley page

--- a/child_pages/cc-elections/Candidates/riley.html
+++ b/child_pages/cc-elections/Candidates/riley.html
@@ -77,6 +77,7 @@
     
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
+    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
         <h2>Celeste Riley</h2>
         <div class="running-for">
