quick summary buttons added to other pages, other small updates

--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -85,6 +85,7 @@
           <br>
 
 <div class="container">
+    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
         <h2>Curtis Bashaw</h2>
         <div class="running-for">
