--- a/child_pages/cc-elections/Candidates/sileo.html
+++ b/child_pages/cc-elections/Candidates/sileo.html
@@ -80,7 +80,7 @@
 
 
 <div class="container">
-
+    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
         <h2>JOE SILEO</h2>
         <div class="running-for">
