--- a/child_pages/cc-elections/cc_vice_president_2024.html
+++ b/child_pages/cc-elections/cc_vice_president_2024.html
@@ -68,7 +68,8 @@
           <h6 class="page-title">US Vice President</h6>
           <p>
             <a href="Candidates/vance.html">J.D. Vance</a> has been chosen by Trump, probably to entice people who are further right than Trump. 
-            As of today, July 25th, we are not quite sure what is going on with the Democrat party in terms of firm nominations for president and vice president. Finally, attorney 
+            After concerns about President Biden's mental decline were highlighted at the debate, the Democrat party has switched in Vice President Kamala Harris as the new nominee, and she 
+            has recently picked Minnesota Governor Tim Walz as her running mate. Finally, attorney 
             and tech entrepreneur <a href="Candidates/shanahan.html">Nicole Shanahan</a> is Kennedy's running mate. NOTE: The president and vice president 
             candidates run as a pair, so you will not literally choose them as individuals. We have only put the vice president candidates on a ballot page to follow the format of 
             the site so you can easily navigate the information.
@@ -78,6 +79,7 @@
     </dialog>
 
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+
     <div id="sample-ballot">
         <button class="quick-summary-reopen">quick summary</button>
         <div class="sb-top-box"> 
@@ -130,7 +132,7 @@
                             
                         </div>
                         <div class="first-name">
-                            <a href="#">??</a>
+                            <a href="Candidates/walz.html">Tim</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>1A</p>
@@ -139,7 +141,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name  push-down-last-name">
-                            <a href="#">??</a>
+                            <a href="Candidates/walz.html">Walz</a>
                         </div>
                     </div>
 
