--- a/child_pages/cc-elections/us_president_2024.html
+++ b/child_pages/cc-elections/us_president_2024.html
@@ -67,8 +67,8 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">US President</h6>
           <p>
-            This year the US Presidential seat is open for re-election. The incumbent, <a href="Candidates/biden.html">Joe Biden</a> has just dropped out of the race and we are 
-            unsure of what that means moving forward. Former president <a href="Candidates/trump.html">Donald J. Trump</a> is the nominee for the Republicans, and recent 
+            This year the US Presidential seat is open for re-election. After concerns about President Biden's mental decline were highlighted at the debate, the Democrat party has switched in Vice President Kamala Harris as the new nominee, and she 
+            has recently picked Minnesota Governor Tim Walz as her running mate. Former president <a href="Candidates/trump.html">Donald J. Trump</a> is the nominee for the Republicans, and recent 
             events have given him some points in the polls. Despite not being included in the recent CNN debate, we are aware that <a href="Candidates/kennedy.html">Robert F. Kennedy Jr.</a> 
             is also on the NJ ballot. This will probably continue to be a wild race.
           </p>
@@ -128,7 +128,7 @@
                             
                         </div>
                         <div class="first-name">
-                            <a href="#">???</a>
+                            <a href="Candidates/harris.html">Kamala</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>1A</p>
@@ -137,7 +137,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name  push-down-last-name">
-                            <a href="#">???</a>
+                            <a href="Candidates/harris.html">Harris</a>
                         </div>
                     </div>
 
