--- a/child_pages/cc-elections/us_senate_2024.html
+++ b/child_pages/cc-elections/us_senate_2024.html
@@ -67,13 +67,14 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">US Senate NJ</h6>
           <p>
-            This year 1 seat is open for election in the US Senate in NJ. The incumbent, <a href="Candidates/menendez.html">Bob Menendez</a> is running as an independent in general response 
-            to his <a href="https://abcnews.go.com/US/sen-bob-menendez-federal-corruption-trial-verdict/story?id=111295557&fbclid=IwZXh0bgNhZW0CMTAAAR1tNvhC5vd4AoiW3EM4kJwMY95A92jBrGr9tT8gVynhhmrU9DjWjVJmcGY_aem_8V5EjDLYhpRQFvqi5_yo3g">
-            recent convictions</a>. The Republicans have nominated <a href="Candidates/bashaw.html">Curtis Bashaw</a> in a somewhat unexpected victory over Trump endorsed candidate 
-            Serrano-Glassner. The Democrats nominated current Congressman <a href="Candidates/kim.html">Andy Kim</a>. This looks like it will be quite an interesting race, as Menendez's 
-            conviction will probably affect his campaign significantly, Andy Kim appears to be a somewhat moderate Democrat, and Bashaw is backed by our local Republicans who seem to have a winning strategy over the past 
-            several years. We are also aware of candidate Peter Vallorosi who will be running as a more straightforward independent, who may shake things up with his pure constitutionalist 
-            perspectives.
+            This year 1 seat is open for election in the US Senate in NJ. The incumbent, <a href="Candidates/menendez.html">Bob Menendez</a> has dropped out after a court battle involving 
+            corruption. The Republicans have nominated <a href="Candidates/bashaw.html">Curtis Bashaw</a> in a somewhat unexpected victory over Trump endorsed candidate 
+            Serrano-Glassner. The Democrats nominated current Congressman <a href="Candidates/kim.html">Andy Kim</a>. This looks like it will be quite an interesting race, as 
+            Andy Kim appears to be a somewhat moderate Democrat, while Bashaw is backed by our local Republicans who seem to have had a winning strategy over the past 
+            several years. We are also aware of candidate Peter Vallorosi, a straightforward independent who may shake things up with his pure constitutionalist 
+            perspectives, and Patricia Mooneyham, another independent whose message is about being a candidate of the working class rather than "a career politicain" (Kim) or someone 
+            who was "born with a silver spoon in their mouth" (Bashaw) (quotes taken from a conversation at Deerfield Day). 
+            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
     </dialog>
