--- a/child_pages/cc-elections/Candidates/kim.html
+++ b/child_pages/cc-elections/Candidates/kim.html
@@ -75,7 +75,10 @@
           </dialog>
 
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        
 <div class="container">
+    <button class="quick-summary-reopen">quick summary</button>
+
     <div class="title-info">
        <h2>Andy Kim</h2>
         <div class="running-for">
