--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -84,6 +84,7 @@
     
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
+    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
         <h2>Victoria Lods</h2>
         <div class="running-for">
