--- a/child_pages/cc-elections/Candidates/vallorosi.html
+++ b/child_pages/cc-elections/Candidates/vallorosi.html
@@ -84,7 +84,9 @@
         </dialog>
 
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        
 <div class="container">
+    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
         <h2>Peter Vallorosi</h2>
         <div class="running-for">
