--- a/child_pages/cc-elections/Candidates/van_drew.html
+++ b/child_pages/cc-elections/Candidates/van_drew.html
@@ -81,7 +81,9 @@
         </dialog>
 
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+
 <div class="container">
+    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
        <h2>Jefferson Van Drew</h2>
         <div class="running-for">
