--- a/child_pages/cc-elections/Candidates/vance.html
+++ b/child_pages/cc-elections/Candidates/vance.html
@@ -91,7 +91,9 @@
         </dialog>
 
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+
 <div class="container">
+    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
        <h2>J.D. Vance</h2>
         <div class="running-for">
