tweaks added to commissioner quick summaries

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -64,9 +64,9 @@
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Robert A. Austino</h6>
-              <p>Sheriff has lengthy experience working in government as sheriff, but no direct experience as a 
-              commissioner. As per a campaign picture on his <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">facebook campaign site</a>, his agenda 
-              seems to be to improve road/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements. 
+              <p>Austino has lengthy experience working in government as sheriff, but no direct experience as a commissioner. As per a campaign picture on his 
+              <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">facebook campaign site</a>, his agenda 
+              seems to be to improve roads/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements. 
               </p>
               <p>              
             When asked at Deerfield Day to clarify his agenda, policy positions, and comparing that to the incumbents he is challenging, Austino basically said (paraphrased): 
