--- a/child_pages/cc-elections/Candidates/sileo.html
+++ b/child_pages/cc-elections/Candidates/sileo.html
@@ -64,14 +64,16 @@
                 <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Joe Sileo</h6>
               <p>
-                Commissioner Director Sileo is up for re-election this year. Being that he is an incumbent, he inherently has more experience than his democrat challengers. Like his ticket-mate 
-                Commissioner Romero, Sileo has a long career in business within the steel industry. He has pointed out at a recent Republican breakfast that his business experience is important 
-                because many decisions of the Commissioner board are more business-related decisions as opposed to political decisions. He has also been involved in several community leadership 
-                positions throughout the years. This was also highlighted at the breakfast meeting as he pointed out that being Director Commissioner he is now the leader and spokesperson of 
-                the board. Like most candidates at the local level, Sileo seems to be running slate (as part of the overall republican team) and there is little forward facing information about how 
+                Commissioner Director Sileo is up for re-election this year. Being that he is an incumbent and one of his challengers Capizola has less than one year of experience as a 
+                commissioner, he has more experience than his democrat challengers. Like his ticket-mate Commissioner Romero, Sileo has a long career in business, specifically within the steel 
+                industry. He has pointed out at a recent Republican breakfast that his business experience is important because many decisions of the Commissioner board are more 
+                business-related decisions as opposed to political decisions. He has also been involved in several community leadership positions throughout the years. This was also 
+                highlighted at the breakfast meeting as he pointed out that being Director Commissioner he is now the leader and spokesperson of the board. Like most candidates at the local
+                level, Sileo seems to be running slate (as part of the overall republican team) and there is little forward facing information about how 
                 he is directly different from his democrat challengers. He has been reached out to via his government email to clarify his individual stances and how he differentiates 
                 himself from his opponents, with no response. However, he also did point out at the breakfast meeting that with the current 7-0 Republican board, productivity has been much more 
-                efficient since there are now significantly less political roadblocks, the commissioner board is all on the same page. Click the x at the top red of this box to go back to the page.
+                efficient since there are now significantly less political roadblocks, with the commissioner board being all on the same page. 
+                Click the x at the top red of this box to go back to the page.
             </div>
           
           </dialog>
