tweaks to county clerk summaries

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -66,9 +66,9 @@
               <p>
                 Commissioner Lods is running as a challenger against Celeste Riley for the County Clerk seat. She has been involved in politics for decades, having previously held positions 
                 such as Chief of Staff for a State Senator and she was the Executive Director for Habitat for Humanity. She is currently a County Commissioner. At a recent Republican breakfast 
-                meeting, Lods pointed out several things that could be seen as why she is running for the position and how she differentiates herself:
+                meeting, Lods pointed out several things that could be seen as why she is running for the position and how she differentiates herself from the incumbent:
                 <br>
-                1. Competence for the role is important because they are responsible for elections and could make election related errors.
+                1. Competence for the role of County Clerk is important because they are responsible for elections and could make election related errors.
                 <br>
                 2. It is important for the Clerk to actually show up for work on a regular basis and not focus on peripheral tasks such as ribbon cuttings.
                 <br>
@@ -76,7 +76,7 @@
                 <br>                
                 When asked in person about what the specific role is of the County Clerk and how she would differentiate herself from the incumbent, she responded "If you don't
                 know what the County Clerk does, that should tell you enough about how the role is being executed.", which I believe implies that the County Clerk should be 
-                acting as the known liason between the public and the government. Click the x at the top red of this box to go back to the page.
+                acting as the known liason between the public and the government, which is a common perception of the role. Click the x at the top red of this box to go back to the page.
               </p>
             </div>
           
