--- a/child_pages/cc-elections/cc_county_clerk_2024.html
+++ b/child_pages/cc-elections/cc_county_clerk_2024.html
@@ -69,15 +69,20 @@
           <p>This year the County Clerk seat is open for election. The current Democrat Clerk, <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/">Celeste Riley</a>, 
             is running for re-election against Republican challenger, <a href="https://www.ccrrogop.org/cumberlandcountyclerk2024">Commissioner Lods</a>.
             Both parties appear to be running 'slate', which means they are running as a team within their parties, potentially all the way up to the national level. All candidates have been
-            reached out to in terms of clarifying their individual characteristics, agendas, and comparisons to other candidates. None have responded. So, if you vote party line, as of now, 
-            that's fair. If you're more of an independent who votes for individuals as opposed to parties, their is no significant information as of yet. 
+            reached out to in terms of clarifying their individual characteristics, agendas, and comparisons to other candidates. None have responded to that specific detailed request. 
+            So, if you vote party line, as of now, that's fair. If you're more of an independent who votes for individuals as opposed to parties, their is no significant information as of yet.
+            Be sure to check out the  
+            <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a> and 
+            <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda) to see the general direction of Republicans. Also be sure to check out the
+            <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a> to see the general direction of Democrats while we wait for the Harris-Walz ticket 
+            to post their specific platform (still not posted as of 8/9/2024 <a href="https://kamalaharris.com/">Campaign Site</a>). 
             <br>
             <br>
-            Celeste Riley, the incumbent, inherently has experience, so it is the opinion of Inform the Vote that there ought to be some kind of discussion as to why the Republican challenger
-            would be significantly better or different than the incumbent, especially in terms of the specific local role they will hold. It's difficult to assess how candidates will perform
-            differently from each other with only similar bios among candidates and a 'party-line' approach when many party-line talking points might not directly apply at the local level or 
-            to the role of County Clerk.
-            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+            Celeste Riley, the incumbent, inherently has experience specifically for this position, so it is the opinion of Inform the Vote that there ought to be some kind of discussion as 
+            to why the Republican challenger would be significantly better or different than the incumbent, especially in terms of the specific local role they will hold. There has been some 
+            mention of this at Republican breakfast meetings, which brought up the issues that many citizens aren't aware of what the County Clerk does (which is concerning since the position is 
+            oftentimes referred to as a liaison between the citizens and the government), the execution (or lack thereof) of the incumbent, and the amount of time the incumbent spends doing the 
+            job. Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
       
