tweaks to house of reps candidate quick summaries

--- a/child_pages/cc-elections/house_of_representatives_2024.html
+++ b/child_pages/cc-elections/house_of_representatives_2024.html
@@ -67,9 +67,17 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">House of Representatives for Congressional District 2</h6>
           <p>
-            This year 1 seat is open for election in the US House of Representatives. The Republicans are running incumbent <a href="Candidates/van_drew.html">Jeff Van Drew</a> and the 
+            This year our 1 seat is open for election in the US House of Representatives. The Republicans are running incumbent <a href="Candidates/van_drew.html">Jeff Van Drew</a> and the 
             Democrats have nominated <a href="Candidates/salerno.html">Joe Salerno</a>. While Van Drew is an incumbent with inherently more experience than Salerno, Salerno has taken a 
-            clear position on his site to directly challenge Van Drew. We expect there to be plenty of information in the coming months to help voters differentiate the two candidates.
+            clear position on his site to directly challenge Van Drew. When asked at Deerfield Day to clarify his experience, agenda, policy positions, and how those compare to Van Drew,
+            Salerno basically said (paraphrased): "I don't have a very specific agenda or policy positions. I was more inspired to run to help government become more unified and less divisive.
+            Van Drew also seems to lack a moral compass." While those seem like potentially valid perspectives, Van Drew has a lot more experience than Salerno, so it is the opinion of 
+            InformTheVote that a much more nuanced platform would be necessary to persuade informed voters, as it's one thing to present a general direction, it's another to have a specific 
+            plan of action and the experience to know how to execute it. However, if you generally lean Republican or Democrat, you can brush up on their platforms at the
+            <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a>, 
+            <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda), the
+            <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a>, and wait for the Harris-Walz ticket 
+            to post their specific platform (still not posted as of 8/9/2024 <a href="https://kamalaharris.com/">Campaign Site</a>).
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
