tweaks to us senator summaries

--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -69,10 +69,9 @@
                 a lot of experience as a successful businessman in real estate and hospitality. He seems to have decided to jump directly into politics in 
                 response to the government's handling of COVID and how it affected small businesses. He wants to secure the border while revamping legal 
                 immigration policy to encourage legal immigration. While Inform the Vote has only briefly spoken to Bashaw, he has been hitting the campaign 
-                trail hard, which is well documented on Twitter/X. When asked directly about differentiating himself from the other primary candidates, Bashaw spoke about 
-                how he won the most counties to get on the primary ballot, and his team has the strongest resources to beat the likely democrat opponent Andy Kim in the 
-                general election. He also addressed rumors about him being a RINO, a 'republican in name only', and he said that he has been a republican his whole life, 
-                only maybe endorsing democrats about 20 percent of the time when he felt it was appropriate. 
+                trail hard, which is well documented on Twitter/X. While there is a lot of information below regarding his agenda, be sure to go over the 
+                <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a> and 
+                <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda) to get a broader idea of how he might handle the position.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
