--- a/child_pages/cc-elections/Candidates/kim.html
+++ b/child_pages/cc-elections/Candidates/kim.html
@@ -65,9 +65,10 @@
               <h6 class="page-title">Andy Kim</h6>
               <p>
                 Andy Kim is a current Congressman who was a Rhoads Scholar, a national security expert at the Pentagon, and a civilan advisor to the 
-                military in Afghanistan.
-                He has a mix of left and right leaning agenda items such as supporting universal healthcare and supporting pro-choice policies, 
-                while also supporting small businesses and reducing red tape.
+                military in Afghanistan. He has a mix of left and right leaning agenda items such as supporting universal healthcare and supporting pro-choice policies, 
+                while also supporting small businesses and reducing red tape. He has been a Congressman for about 5 years, so he clearly has the most directly relevant experience
+                in comparison to the other candidates. He has a lot of information below regarding his overall agenda, but be sure to go over the
+                <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a> to get a broader view of how he might handle the position.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
