--- a/child_pages/cc-elections/us_senate_2024.html
+++ b/child_pages/cc-elections/us_senate_2024.html
@@ -67,7 +67,7 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">US Senate NJ</h6>
           <p>
-            This year 1 seat is open for election in the US Senate in NJ. The incumbent, <a href="Candidates/menendez.html">Bob Menendez</a> has dropped out after a court battle involving 
+            This year 1 seat is open for the US Senate in NJ. The incumbent, <a href="Candidates/menendez.html">Bob Menendez</a> has dropped out after a court battle involving 
             corruption. The Republicans have nominated <a href="Candidates/bashaw.html">Curtis Bashaw</a> in a somewhat unexpected victory over Trump endorsed candidate 
             Serrano-Glassner. The Democrats nominated current Congressman <a href="Candidates/kim.html">Andy Kim</a>. This looks like it will be quite an interesting race, as 
             Andy Kim appears to be a somewhat moderate Democrat, while Bashaw is backed by our local Republicans who seem to have had a winning strategy over the past 
