adding in gop platform bullet points. WIP

--- a/child_pages/cc-elections/Candidates/trump.html
+++ b/child_pages/cc-elections/Candidates/trump.html
@@ -107,8 +107,37 @@
             <div class="agenda-thesis">
                 <br>
                 <ul>
-                    <a href="https://www.donaldjtrump.com/platform" target="_blank" rel="noopener noreferrer" class="website-link">Campaign Site</a>
-                    <a href="https://rncplatform.donaldjtrump.com/?_gl=1*1bh512a*_gcl_au*MTE0OTEwMzI2NC4xNzIzMjIxNzMz&_ga=2.250993413.249493006.1723221733-1848814055.1723221733" target="_blank" rel="noopener noreferrer" class="website-link">GOP Platform</a>
+                    <li><a href="https://www.donaldjtrump.com/platform" target="_blank" rel="noopener noreferrer" class="website-link">Campaign Site</a></li>
+                    <li><a href="https://rncplatform.donaldjtrump.com/?_gl=1*1bh512a*_gcl_au*MTE0OTEwMzI2NC4xNzIzMjIxNzMz&_ga=2.250993413.249493006.1723221733-1848814055.1723221733" target="_blank" rel="noopener noreferrer" class="website-link">GOP Platform</a></li>
+                    <li>Secure the border, including finishing the wall, restoring previous Trump border policies, shifting federal law enforcement to immigration enforcement, using 
+                        advanced technology, bringing overseas troops to the border, deploying the navy to blockade fentanyl shipments.
+                    </li>
+                    <li>Deport illegal migrants, starting with dangerous criminals using the local police. Strengthen ICE, increase penalties for illegal entry and overstaying visas. 
+                        Reinstate Remain in Mexico. Reinstate the Alien Enemies Act to remove known or suspected gang members, drug dealers, or cartel members. Use Title 42 to end child 
+                        trafficking. 
+                    </li>
+                    <li>Merit-based immigration to ensure migrants are a net positive to the economy and put American workers first.</li>
+                    <li>Cut federal funding to sanctuary jurisdictions that release illegal alien criminals rather than handing them over to ICE.</li>
+                    <li>Bring back domestic manufacturing</li>
+                    <li>Lower inflation</li>
+                    <li>Drill, baby, drill (for oil in America) by lifting restrictions on American energy production, terminating the Green New Deal, and implementing nuclear energy.</li>
+                    <li>Fund the military to be the best in the world</li>
+                    <li>Equal treatment for all under the law</li>
+                    <li>Tax cuts for workers, including no tax on tips</li>
+                    <li>Defend the constitution and the bill of rights</li>
+                    <li>Prevent WWIII</li>
+                    <li>End weaponization of government against the American people</li>
+                    <li>Demolish foreign drug cartels, gang violence, and lock up violent offenders</li>
+                    <li>Rebuild cities to make them safe and clean again</li>
+                    <li>Keep the US Dollar as the world's reserve currency</li>
+                    <li>Protect social security and medicare, including no changes to the retirement age</li>
+                    <li>Cancel the electric vehicle mandate</li>
+                    <li>Cut federal funding to schools pushing critical race theory, radical gender ideology, and other inappropriate racial, sexual, or political content</li>
+                    <li>Keep men out of women's sports</li>
+                    <li>Deport pro-hamas radicals</li>
+                    <li>Secure the elections, including same day voting, voter identification, paper ballots, and proof of citizenship</li>
+                    <li>Slash wasteful government spending</li>
+                    <li>Cut burdensome regulations for low and middle income households</li>
                 </ul>
             </div>
 
