name fix on kennedy page

--- a/child_pages/cc-elections/Candidates/kennedy.html
+++ b/child_pages/cc-elections/Candidates/kennedy.html
@@ -74,7 +74,7 @@
 <div class="container">
     <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
-       <h2>Donald J. Trump</h2>
+       <h2>Robert F. Kennedy, Jr.</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
             <div class="position">President</div>
