--- a/child_pages/cc-elections/Candidates/trump.html
+++ b/child_pages/cc-elections/Candidates/trump.html
@@ -118,9 +118,47 @@
                     </li>
                     <li>Merit-based immigration to ensure migrants are a net positive to the economy and put American workers first.</li>
                     <li>Cut federal funding to sanctuary jurisdictions that release illegal alien criminals rather than handing them over to ICE.</li>
+                    <li>Cut regulations for businesses so they can create more jobs and incentivize innovation</li>
+                    <li>Bring back Trump tax cuts, including doubling the standard deduction and expanding the child tax credit</li>
+                    <li>America First foreign trade policy</li>
+                    <li>Innovation in crypto, including opposing a Central Bank Digital Currency, the right to mine bitcoin, and allow surveillance-free digital transactions</li>
+                    <li>Allow unrestricted innovation in AI (artificial intelligence) while keeping it free from left wing influence.</li>
+                    <li>Become leaders in space pioneership</li>
                     <li>Bring back domestic manufacturing</li>
                     <li>Lower inflation</li>
                     <li>Drill, baby, drill (for oil in America) by lifting restrictions on American energy production, terminating the Green New Deal, and implementing nuclear energy.</li>
+                    <li>Help lower mortgage rates through reducing inflation, opening federal lands to housing development, promoting homeownership through tax incentives</li>
+                    <li>Promote accessible higher education through alternatives to traditional 4 year colleges</li>
+                    <li>Support parental rights in schools</li>
+                    <li>End teacher tenure and adopt merit pay</li>
+                    <li>Adopt Universal School Choice, expand 529 Education Savings Accounts, and support homeschooling</li>
+                    <li>Support project based learning in schools, support meaningful work experience at schools, and expose politicized education</li>
+                    <li>Defund schools that engage in inappropriate political indoctrination</li>
+                    <li>Promote civics education</li>
+                    <li>Freedom to pray in school</li>
+                    <li>Close the department of education in Washington and return education to the states</li>
+                    <li>Culturally promote the sanctity of marriage, the blessings of childhood, the foundational role of families, and support working parents</li>
+                    <li>Pro-policing policies and stand up to Marxist prosecutors</li>
+                    <li>Compassionately address homelessness</li>
+                    <li>Reassert federal control of Washington D.C.</li>
+                    <li>Redirect funds appropriated to illegal immigrants to Veterans</li>
+                    <li>Combat antisemitism</li>
+                    <li>Stop weaponized government</li>
+                    <li>Stop censorship of lawful speech</li>
+                    <li>Defend religious liberty including a task force on fighting anti-christian bias</li>
+                    <li>Oppose late term abortion while supporting prenatal care, access to IVF, and birth control</li>
+                    <li>Ban tax-payer funded sex change surgeries and schools promoting gender transition</li>
+                    <li>Reverse Biden's rewrite of Title IX and restore protections for women and girls</li>
+                    <li>Protect Americans in our territories like Guam, the Virgin Islands, Puerto Rico, etc.</li>
+                    <li>Stand with Israel and seek peace in the middle east</li>
+                    <li>Restore peace in Europe</li>
+                    <li>Overhaul standards on school discipline, advocate for immediate suspension of violent students.</li>
+                    <li>Affordable healthcare through transparency and competition</li>
+                    <li>Baseline tariffs on foreign-made goods, pass the Trump Reciprocal Trade Act, and address unfair trading practices</li>
+                    <li>Decouple from China through revoking their Most Favored Nation Status, phase out imports of essential goods, halt their purchasing of American real estate and industries</li>
+                    <li>Revive the American auto industry by cutting regulations, canceling the electric vehicle mandate, and preventing Chinese vehicle imports.</li>
+                    <li>Bring back supply chains to the US</li>
+                    <li>Prevent jobs outsourcing through Buy American and Hire American policies</li>
                     <li>Fund the military to be the best in the world</li>
                     <li>Equal treatment for all under the law</li>
                     <li>Tax cuts for workers, including no tax on tips</li>
@@ -131,6 +169,7 @@
                     <li>Rebuild cities to make them safe and clean again</li>
                     <li>Keep the US Dollar as the world's reserve currency</li>
                     <li>Protect social security and medicare, including no changes to the retirement age</li>
+                    <li>Increase focus on chronic disease prevention and management, long-term care, and in-home care for seniors</li>
                     <li>Cancel the electric vehicle mandate</li>
                     <li>Cut federal funding to schools pushing critical race theory, radical gender ideology, and other inappropriate racial, sexual, or political content</li>
                     <li>Keep men out of women's sports</li>
