added kennedys agenda

--- a/child_pages/cc-elections/Candidates/harris.html
+++ b/child_pages/cc-elections/Candidates/harris.html
@@ -114,7 +114,6 @@
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 <br>
-                <ul>
                     With the abrupt change in switching out Biden for Harris as the Democrat nominee for president, it is not totally clear what her specific agenda is, as there is 
                     nothing officially posted on her campaign site yet. However, one might infer that she 
                     will continue her general left leaning record, adopt many policies from the <a href="https://democrats.org/where-we-stand/party-platform/">Democrat platform</a>, and follow 
@@ -124,7 +123,12 @@
                     reintroducing the <a href="https://www.congress.gov/bill/117th-congress/senate-bill/2747">Freedom to Vote Act</a> and the 
                     <a href="https://www.congress.gov/bill/117th-congress/house-bill/4">John R. Lewis Voting Rights Advancement Act</a> to congress. Hopefully after the initial fundraising 
                     and Vice Presidential nomination process of the past several weeks, an official agenda getting into more direct methods will be officially posted.
-                </ul>
+                    <br>
+                    <br>
+                    <h5>Protecting Americans and Recovering from the COVID-19 pandemic</h5>
+                        <ul>
+                            <li></li>
+                        </ul>
             </div>
 
             <br>
