--- a/child_pages/cc-elections/Candidates/kennedy.html
+++ b/child_pages/cc-elections/Candidates/kennedy.html
@@ -106,7 +106,64 @@
             <div class="agenda-thesis">
                 <br>
                 <ul>
-                    
+                    <li>Break up corporate control on government to make our food healthier, stop endless wars, bring economic security to the middle class, clean up the environment, 
+                        and bring down healthcare costs.
+                    </li>
+                    <li>Return the middle class to a propserous lifestyle by raising the federal minimum wage to $15/hr, prosecute union busting corporations, expand free childcare, 
+                        and much more <a href="https://www.kennedy24.com/economy" target="_blank" rel="noopener noreferrer" class="website-link">Economy Section of Campaign Site</a>
+                    </li>
+                    <li>Make housing affordable again through government backed mortgage bonds, bring vacant land and buildings seized by the government back on the market, change 
+                        zoning laws to allow granny-flats (extra housing units on main properties), tax code changes to disincentivize corporate housing.</li>
+                    <li>Pull back resources from the Military Industrial Complex and appropriate those funds at home to help revitalize the nation. </li>
+                    <li>Address the humanitarian crisis at the border by sealing the border primarily through modern technology, end the overwhelming of the asylum process, and working with 
+                        other countries to stem the flow of migrants</li>
+                    <li>A strong environmental protection plan including end of corporate control of environmental regulatory agencies, reducing toxic chemical pollution and plastic 
+                        waste, protecting forests/rivers/fisheries/wildlife habitats, and adopt a wildfire management plan.
+                    </li>
+                    <li>Address chronic disease by shifting the National Institutes of Health priorities to chronic health prevention. Uproot the influence of Big Pharma and Wall Street 
+                        on the medical regulatory agencies. Clean up our agricultural system to promote an organic, regenerative system. Start a national fitness program.
+                    </li>
+                    <li>Policies focused on helping the black community, including investing in black economies, police reform, justice for black farmers, prison reform, and more.
+                        <a href="https://www.kennedy24.com/racial_healing" target="_blank" rel="noopener noreferrer" class="website-link">Racial Healing Section of Campaign Site</a>
+                    </li>
+                    <li>Address historic injustices done to Native American populations through honoring the spirit and letter of treaties. Restoration of taken land and resources, 
+                        compensation for broken treaties, protection and enhancement of natural resources in Indian Country, and restore trust between federal government and Native Americans.
+                    </li>
+                    <li>Restore our rights through dismantling the censorship-industrial complex, respect the right to privacy and freedom from unreasonable searches and seizures, 
+                        prevent Covid-era suspension of the right to assembly/trial by jury/freedom of worship/forced business closures. Stop propaganda and targeted leaks. Never weaponize 
+                        the law against political opponents. End the war on drugs and grant amnesty to nonviolent drug offenders. Shut down the school-to-prison pipeline. Transform the police 
+                        rather than defund them. 
+                    </li>
+                    <li>Prioritize veterans by establishing a Veterans Council within the Executive Office to give them a "seat at the table" in regards to military policy, including at 
+                        National Security Council meetings. He also plans to protect and enhance veterans' benefits.</li>
+                    <li>Promote and expand Americorps, a program like a hybrid of the Peace Corps and the military, but focused domestically to help young people prepare for adulthood. 
+                        Volunteers will engage in military style standards, learn vocational skills, and receive similar benefits to that of serving in the military.
+                    </li>
+                    <li>A "More Choices, More Life" policy on abortion, which focuses on subsidized daycare through redirecting Ukraine war funds. Kennedy believes that by offering 
+                        universal childcare, we can protect a woman's right to choose but make it less probable to make that choice, thereby reducing the amount of abortions while adding 
+                        to the GDP through incentivizing new childcare business. He also plans to strengthen adoption infrastructure, increase the child tax credit, and pregnancy support 
+                        centers.
+                    </li>
+                    <li>Return to free market energy policies which end subsidies to energy companies and stop taxpayers from covering the cleanup costs when energy companies harm the 
+                        environment. By returning costs back to the companies, free market principles will help correct their waste and damage, and help shine a light on the efficiencies of 
+                        clean energy. He will also upgrade the nation's power grid to connect areas to clean energy sources. Citizens will also be able to sell unused energy from sources like 
+                        solar panels back to the government.
+                    </li>
+                    <li>
+                        He will make sure that clean energy projects are implemented mindfully so as to not cause harm to the environment in the process. Off-shore wind turbines harm the ocean and 
+                        current mining of rare earth metals is destructive. Placing wind turbines internally within the country and using sodium batteries is less harmful.
+                    </li>
+                    <li>Tax fairness by doubling the child tax credit, restoring the personal exemption of $5000, increasing standard deduction, and eliminating the carried interest loophole</li>
+                    <li>He will promote Healing Farms, places for people to recover from addiction while unplugging from technology, eating organic food, and learning new skills such as 
+                        regenerative farming, carpenty, plumbing, etc. He wants to fund this through taxes on marijuana.
+                    </li>
+                    <li>Extensive advocacy of labor and union rights <a href="https://www.kennedy24.com/labor" target="_blank" rel="noopener noreferrer" class="website-link">Labor Section of Campaign Site</a></li>
+                    <li>Care for Every Child - a plan focused on making childcare affordable for everyone. This includes 100% subsidized child care for everyone below the poverty line, affordable care to 
+                        people above the poverty line for children 3 months to 5 years old, and payment to in-home caregivers. He plans to pay for this through redirecting military funds.
+                    </li>
+                    <li>Be very pro-active in blockchain technology to help protect free speech, the freedom to transact, and be the world's leader in this new technology. 
+                        <a href="https://www.kennedy24.com/bitcoin-blockchain-policy" target="_blank" rel="noopener noreferrer" class="website-link">Bitcoin/Blockchain Section of Campaign Site</a>
+                    </li>
                 </ul>
             </div>
 
